--- a/rate-repository-app/package.json
+++ b/rate-repository-app/package.json
@@ -17,15 +17,21 @@
     },
     "transformIgnorePatterns": [
       "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg|react-router-native)"
+    ],
+    "setupFilesAfterEnv": [
+      "<rootDir>/setupTests.js"
     ]
   },
   "dependencies": {
-    "@apollo/client": "^4.0.10",
+    "@apollo/client": "^4.0.13",
     "@expo/metro-config": "^0.17.4",
     "@expo/metro-runtime": "~3.1.1",
     "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-picker/picker": "2.6.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "expo": "~50.0.17",
+    "expo-linking": "^6.2.2",
     "expo-status-bar": "~1.11.1",
     "formik": "^2.4.9",
     "graphql": "^16.12.0",
@@ -34,17 +40,22 @@
     "react-native": "0.73.6",
     "react-native-web": "~0.19.6",
     "react-router-native": "^6.30.0",
+    "use-debounce": "^10.1.0",
     "yup": "^1.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/eslint-parser": "^7.28.5",
-    "eslint": "^9.39.1",
-    "eslint-plugin-jest": "^29.12.1",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^13.3.3",
+    "baseline-browser-mapping": "^2.9.18",
+    "eslint": "^9.39.2",
+    "eslint-plugin-jest": "^28.14.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-native": "^5.0.0",
-    "jest": "^27.5.1",
-    "jest-expo": "^54.0.16"
+    "jest": "^29.7.0",
+    "jest-expo": "^50.0.4",
+    "react-test-renderer": "^18.2.0"
   },
   "private": true
 }
